maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:63: error: value unary_! is not a member of Unit
  if(!gauche)
     ^